[gd_scene load_steps=5 format=2]

[ext_resource path="res://Icons/Pentagon.png" type="Texture" id=1]
[ext_resource path="res://Tiles/Transferbackground.png" type="Texture" id=2]
[ext_resource path="res://Tiles/Transfer.png.png" type="Texture" id=3]
[ext_resource path="res://Objects/Transfer.gd" type="Script" id=4]

[node name="Transfer" type="Node2D"]
script = ExtResource( 4 )

[node name="Color" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.901961, 0.901961, 0.901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texture" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="."]
modulate = Color( 0.870588, 0.756863, 0, 1 )
margin_left = 2.0
margin_top = 3.0
margin_right = 42.0
margin_bottom = 43.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon2" type="TextureRect" parent="."]
modulate = Color( 0.870588, 0.756863, 0, 1 )
margin_left = 28.0
margin_top = 3.0
margin_right = 68.0
margin_bottom = 43.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon3" type="TextureRect" parent="."]
modulate = Color( 0.870588, 0.756863, 0, 1 )
margin_left = 30.0
margin_top = 28.0
margin_right = 70.0
margin_bottom = 68.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon4" type="TextureRect" parent="."]
modulate = Color( 0.870588, 0.756863, 0, 1 )
margin_left = 3.0
margin_top = 28.0
margin_right = 43.0
margin_bottom = 68.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
